--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get_time_ago: ^1.3.1
+  enough_mail: ^2.1.6
 
 dev_dependencies:
   flutter_test:
