--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get_time_ago: ^1.3.1
   enough_mail: ^2.1.6
   flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
